fixed body margins, aligned about divs better, aligned footer better

--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -68,7 +68,7 @@ h1, h2, h3, h4, h5 {
 /* Your code starts here! */
 
 body{
-	margin: 0 15% 15% 15%;
+	margin: 0 23% 23% 23%;
 } 
 
 
@@ -295,10 +295,11 @@ justify-content: center;
 	display: flex;
 	background-color: lightgrey;
 	margin-bottom: 15px;
-	flex-direction: column;
-	justify-content: space-between;
+
 	border: 2px solid black;
 	padding: 5px;
+	font-size: 20px;
+	width: 45%;
 }
 
 
@@ -319,7 +320,7 @@ justify-content: center;
 
 .bottom {
 	display: flex;
-	width: 100%;
+	width: 99%;
 	justify-content: space-between;
 }
 
